Fixed test and made the code java 8 compliant